docs: rewrite README and add one-command local setup
- full README: TL;DR, validate-only vs run-for-real, endpoints, troubleshooting
- add docker-compose.yml (local Postgres)
- add .env.example
- install_start scripts: auto-generate dev JWT keypair + start Postgres